WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192832
Error message for `-x ** y` contains a typo.
https://bugs.webkit.org/show_bug.cgi?id=192832
Summary
Error message for `-x ** y` contains a typo.
Ross Kirsling
Reported
2018-12-18 15:25:15 PST
Error message for `-x ** y` contains a typo.
Attachments
Patch
(4.65 KB, patch)
2018-12-18 15:27 PST
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Patch for landing
(4.60 KB, patch)
2018-12-18 21:58 PST
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ross Kirsling
Comment 1
2018-12-18 15:27:41 PST
Created
attachment 357623
[details]
Patch
Ross Kirsling
Comment 2
2018-12-18 15:31:15 PST
Comment on
attachment 357623
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=357623&action=review
> Source/JavaScriptCore/parser/Parser.cpp:3889 > - failIfTrue(match(POW) && isUnaryOpExcludingUpdateOp(leadingTokenTypeForUnaryExpression), "Amiguous unary expression in the left hand side of the exponentiation expression; parenthesis must be used to disambiguate the expression"); > + failIfTrue(match(POW) && isUnaryOpExcludingUpdateOp(leadingTokenTypeForUnaryExpression), "Ambiguous unary expression in the left hand side of the exponentiation expression; parenthesis must be used to disambiguate the expression");
Hmm, if we're fixing this string anyway, I suppose "parenthesis must be used" -> "parentheses must be used" would be better too...
Saam Barati
Comment 3
2018-12-18 21:12:10 PST
Comment on
attachment 357623
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=357623&action=review
>> Source/JavaScriptCore/parser/Parser.cpp:3889 >> + failIfTrue(match(POW) && isUnaryOpExcludingUpdateOp(leadingTokenTypeForUnaryExpression), "Ambiguous unary expression in the left hand side of the exponentiation expression; parenthesis must be used to disambiguate the expression"); > > Hmm, if we're fixing this string anyway, I suppose "parenthesis must be used" -> "parentheses must be used" would be better too...
r=me with this change
Ross Kirsling
Comment 4
2018-12-18 21:58:49 PST
Created
attachment 357654
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2018-12-18 22:37:55 PST
Comment on
attachment 357654
[details]
Patch for landing Clearing flags on attachment: 357654 Committed
r239370
: <
https://trac.webkit.org/changeset/239370
>
WebKit Commit Bot
Comment 6
2018-12-18 22:37:57 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7
2018-12-18 22:38:25 PST
<
rdar://problem/46832408
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug