Error message for `-x ** y` contains a typo. https://bugs.webkit.org/show_bug.cgi?id=192832

Reviewed by Saam Barati.

JSTests:

* ChakraCore/test/UnitTestFramework/UnitTestFramework.js:
(assert.assert.return.throws):
* stress/pow-expects-update-expression-on-lhs.js:
(throw.new.Error):
Update test expectations which match against the exact error message.

Source/JavaScriptCore:

* parser/Parser.cpp:
(JSC::Parser<LexerType>::parseBinaryExpression):
Make corrections to error message: "amiguous" -> "ambiguous", "parenthesis" -> "parentheses"


Canonical link: https://commits.webkit.org/207417@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239370 268f45cc-cd09-0410-ab3c-d52691b4dbfc